Rename and clean up report files

--- a/Index.html
+++ b/Index.html
@@ -80,6 +80,7 @@
   <!-- Навигация по вкладкам и внешние ссылки -->
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
+        <a class="nav-link" href="?view=menu">Главное меню</a>
         <!-- Кнопка "Обновить" как вкладка -->
         <a class="nav-link" href="#" id="nav-refresh-link">Обновить</a> 
 
