--- a/Index2.html
+++ b/Index2.html
@@ -209,6 +209,7 @@
 <body>
   <div class="container-main">
     <h1>Управление автоматами Vendista</h1>
+    <a class="btn btn-link" href="?view=menu">Главное меню</a>
     <div id="globalStatusMessage" class="status-message-bar hidden"></div>
 
     <div class="section-block">
