--- a/Index3.html
+++ b/Index3.html
@@ -138,6 +138,7 @@
 <body>
   <div class="container-main">
     <h1>Управление товарами и журнал пакетов</h1>
+    <a class="btn btn-link" href="?view=menu">Главное меню</a>
     <div id="remoteReportStatusDisplay">Статус удаленного отчета не определен.</div>
     <div id="globalStatusMessage" class="status-message-bar hidden"></div>
     <div class="filters-area">
