--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Updated: 2025-07-23 -->
   <base target="_top">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -80,6 +81,7 @@
   <!-- Навигация по вкладкам и внешние ссылки -->
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
+        <a class="nav-link" href="?view=menu">Главное меню</a>
         <!-- Кнопка "Обновить" как вкладка -->
         <a class="nav-link" href="#" id="nav-refresh-link">Обновить</a> 
 
