Add newline at end of swagger

--- a/Index2.html
+++ b/Index2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Updated: 2025-07-24 -->
   <title>Управление автоматами Vendista</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -209,6 +210,7 @@
 <body>
   <div class="container-main">
     <h1>Управление автоматами Vendista</h1>
+    <a class="btn btn-link" href="?view=menu">Главное меню</a>
     <div id="globalStatusMessage" class="status-message-bar hidden"></div>
 
     <div class="section-block">
