--- a/Index3.html
+++ b/Index3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Updated: 2025-07-24 -->
   <!-- ... (head секция без изменений) ... -->
   <title>Управление товарами и журнал пакетов</title>
   <meta charset="UTF-8">
@@ -138,6 +139,7 @@
 <body>
   <div class="container-main">
     <h1>Управление товарами и журнал пакетов</h1>
+    <a class="btn btn-link" href="?view=menu">Главное меню</a>
     <div id="remoteReportStatusDisplay">Статус удаленного отчета не определен.</div>
     <div id="globalStatusMessage" class="status-message-bar hidden"></div>
     <div class="filters-area">
